# legdrop_legends_cpp

./: CMakeLists.txt  README.md
src/: Constants.h  Layer.cpp  Layer.h  Map.cpp  Map.h  StateManager.cpp  StateManager.h  main.cpp
src/assets/images/: Nurse-Sheet.aseprite  bad jim.aseprite  clerk-Sheet.aseprite  clerk.aseprite  cradaddy2_16x16-Sheet.aseprite  cradaddy2_16x16.aseprite  jukebox.aseprite
src/assets/images/asprite/: Angel16x16.aseprite  Angel32x32-Sheet.aseprite  Angle16x16.aseprite  Angle32x32.aseprite  Backyard 2.aseprite  Brother16x16.aseprite  Brother64x64-Sheet.aseprite  Brother64x64.aseprite  Female16x16.aseprite  Gym_building.aseprite  Main_palett.aseprite  Mr Mercua.aseprite  Nurse.aseprite  Sprite-0003.aseprite  Town1_tileset 2.aseprite  Town1_tileset.aseprite  Witch16x16.aseprite  bad jim-Sheet.aseprite  bad jim.aseprite  bad_jim_32x32-Sheet.aseprite  bad_jim_32x32.aseprite  bar.aseprite  bonce_mania.aseprite  bounce_mania.aseprite  brother_32x32-Sheet.aseprite  brother_32x32.aseprite  clinc_building.aseprite  clinic.aseprite  clown_16x16-Sheet.aseprite  clown_16x16.aseprite  clown_32x32.aseprite  craw daddy.aseprite  (+23 more)
src/assets/maps/: Legdrop gym .tsx  Town1_tileset.tsx  _building.tsx  backyard.tsx  bar.tmx  bar.tsx  clinic.tmx  clinic.tsx  gym_building.tsx  legdrop_gym.tmx  store building.tsx  store.tmx  store.tsx  test_indoor_map.tmx  town1 2.tmx  town1.tiled-session  town1.tmx
src/core/: Timer.cpp  Timer.h
src/objects/: MainEntity.cpp  MainEntity.h  NPC.cpp  NPC.h  Player.cpp  Player.h
src/states/: MainState.cpp  MainState.h  State.h
